@@ -39,6 +39,7 @@ RDC_BUILD_HOSTNAME
 AS_MESSAGE(checking required programs...)
 AC_PROG_CC
 AC_PROG_CXX
+AC_PROG_RANLIB
 AM_INIT_AUTOMAKE([dist-bzip2])
 
 # Checks for libraries.
@@ -110,6 +111,6 @@ AH_BOTTOM([
 
 # END
 AS_MESSAGE(writing results...)
-AC_CONFIG_FILES([Makefile m4/Makefile include/Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile m4/Makefile include/Makefile libtun6/Makefile src/Makefile])
 AC_OUTPUT
 
