@@ -1,0 +1,5 @@
+Makefile.in
+Makefile
+*.o
+*.a
+.deps
